# ai-performance-engineering

./: .gitignore
code/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  conftest.py  sitecustomize.py  usercustomize.py
code/ch01/: README.md  baseline_gemm.py  baseline_nvfp4_mlp.py  baseline_performance.py  compare.py  expectations_4x_gb200.json  optimized_gemm_batched.py  optimized_gemm_strided.py  optimized_nvfp4_mlp.py  optimized_performance.py  optimized_performance_fp16.py  optimized_performance_fusion.py
code/ch02/: README.md  baseline_grace_coherent_memory.py  baseline_memory_transfer_multigpu.py  compare.py  cpu_gpu_topology_aware.py  expectations_4x_gb200.json  hardware_info.py  nvlink_c2c_bandwidth_benchmark.py  optimized_cublas.py  optimized_grace_coherent_memory.py  optimized_memory_transfer_multigpu.py
code/ch03/: README.md  baseline_docker.py  baseline_gemm.py  baseline_kubernetes.py  baseline_numa_unaware.py  baseline_rack_prep.py  bind_numa_affinity.py  compare.py  cpu_gpu_numa_optimizations.sh  expectations_4x_gb200.json  kubernetes_topology_pod.yaml  mig_mps_tool.py  numa_topology_script.sh  optimized_docker.py  optimized_gemm.py  optimized_kubernetes.py  optimized_numa_unaware.py  optimized_rack_prep.py  power_perf_watt_tool.py  power_tuning_tool.py  train.py
code/ch04/: README.md  bandwidth_benchmark_suite_multigpu.py  barrier_straggler_multigpu.py  baseline_bandwidth_benchmark_suite_multigpu.py  baseline_cpu_reduction.py  baseline_dataparallel.py  baseline_disaggregated.py  (+83 more)
code/labs/nanochat_fullstack/rustbpe/: Cargo.toml  README.md
(+1818 files in other folders)
